# LitReviewAgents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_agent_example.py  iot_compliance.yaml  ml_reproducibility.yaml
src/litreviewagents/: __init__.py  agents.py  cli.py  config.py  llm.py  memory.py  pipeline.py  report.py
src/litreviewagents/sources/: __init__.py
tests/: test_smoke.py
