[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litreviewagents"
version = "0.1.0"
description = "Multi-agent literature search and synthesis pipeline for academic manuscripts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Kunal Gawande" },
]
keywords = [
    "literature-review", "academic", "research", "llm", "agents",
    "arxiv", "crossref", "ollama", "openai-compatible",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyyaml>=6.0",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
]

[project.scripts]
litreviewagents = "litreviewagents.cli:main"

[project.urls]
Homepage = "https://github.com/ethalkunal/LitReviewAgents"
Repository = "https://github.com/ethalkunal/LitReviewAgents"
Issues = "https://github.com/ethalkunal/LitReviewAgents/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
